added IDirectInput8A proxy

--- a/proxy/proxy.vcxproj
+++ b/proxy/proxy.vcxproj
@@ -80,9 +80,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="device.cpp" />
     <ClCompile Include="proxy.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="device.hpp" />
     <ClInclude Include="proxy.hpp" />
   </ItemGroup>
   <ItemGroup>
