--- a/proxy/proxy.vcxproj.filters
+++ b/proxy/proxy.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="proxy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="device.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="proxy.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="device.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
